# RustPIC

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs  sim.rs
src/fec/: ldpc.rs  mod.rs  rs.rs
src/ofdm/: beacon.rs  drm_pilots.rs  mod.rs  params.rs  scrambler.rs  zc.rs
src/ofdm/rx/: demapper.rs  equalizer.rs  frame.rs  hilbert.rs  mod.rs  mode_detect.rs  pilot_sync.rs  sync.rs
src/ofdm/tx/: frame.rs  mod.rs
