[package]
name        = "rustpic"
version     = "0.12.0"
edition     = "2021"
description = "RustPIC — digital image transmission over narrow-band FM via voice repeaters"
license     = "MIT"

[lib]
name = "rustpic"
path = "src/lib.rs"

[[bin]]
name = "rustpic"
path = "src/main.rs"

[dependencies]
rustfft     = "6.2"
num-complex = "0.4"
thiserror   = "2"
tracing     = "0.1"
rand        = "0.8"

[dev-dependencies]
approx = "0.5"

[[bin]]
name = "tx"
path = "src/bin/tx.rs"

[[bin]]
name = "rx"
path = "src/bin/rx.rs"
